<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_up">Sign up</string>
    <string name="welcome_to_shoe_world">WELCOME TO SHOE INVENTORY</string>
    <string name="description">We are happy to see you here.Download the Shoe store Inventory App to add the shoes to the Inventory.From Flip Flop to Branded Shoes you love.</string>
    <string name="get_started">Get Started</string>
    <string name="Instructions">Instructions</string>
    <string name="instruction_note">How to add a shoe to the inventory</string>
    <string name="Instruction">Click On the (+) to add new shoe to the inventory</string>
    <string name="click">Click</string>
    <string name="shoe_list">Shoe List</string>
    <string name="submit">add</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="size">Size</string>
    <string name="description1">Description</string>
    <string name="string_value">%s %s</string>
    <string name="double_value">%s %.1f</string>
    <string name="welcome_to_shoe_inventory">Welcome To Shoe Inventory</string>
</resources>
