<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the Welcome  Screen -->
<!-- Used Linear Layout since there are only 3 views that are alligned vertical to each other  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="50dp"
        android:textAlignment="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/welcome_to_shoe_inventory"
            android:textColor="#D81B60"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="50dp"
            android:text="@string/description" />

        <Button
            android:id="@+id/getstarted"
            style="@style/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_started" />
    </LinearLayout>

</layout>